Upgraded Kotlin to 2.0.0; Converted AtomicJS sub-project to use Kotlin multiplatform; Upgraded JDK to 21; Upgraded Gradle to 8.8; Upgraded Kotlin Coroutines to 1.8.1; Upgraded AtomicFU to 0.24.0; Upgraded Lincheck to 2.32; Upgraded RXJava to 3.1.8