@@ -8,7 +8,7 @@ repositories {
 dependencies {
     val junitVersion: String by project
     testImplementation("org.jctools:jctools-core:4.0.1")
-    testImplementation("org.jetbrains.kotlinx:lincheck:2.17")
+    testImplementation("org.jetbrains.kotlinx:lincheck:2.32")
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
@@ -16,12 +16,6 @@ dependencies {
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
     jvmArgs = listOf(
-        // Arguments that are required for working with classes from
-        // the java.util package
-        "--add-opens",
-        "java.base/jdk.internal.misc=ALL-UNNAMED",
-        "--add-exports",
-        "java.base/jdk.internal.util=ALL-UNNAMED",
         // Arguments that are to be uncommented for LockCoarseningTest
         // "-XX:+UnlockDiagnosticVMOptions",
         // "-XX:+StressLCM",
